--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 /* GLOBAL RESET & BASE THEME */
+@import './styles/tokens.css';
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=JetBrains+Mono:wght@400;500&display=swap');
 
 :root {
